# deeplearning-linux

./: main.py  pyproject.toml
BinaryClassification/: cats_and_dogs_cnn.ipynb
