[project]
name = "deeplearning-linux"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.2",
    "pip>=25.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorflow[and-cuda]>=2.20.0",
]
